Misc domain designer fixes for Sample Manager   - Issue 39256: No margin between panel and buttons on single domain for sample type   - Issue 39225: Sample Manager profile page doesn't block whitespace only display name   - Issue 39093: Help link in core domain designer points to future Sample Manager docs   - Issue 39079: Assay Design page resizing produces strange layout

--- a/experiment/src/client/DomainDesigner/domainDesigner.scss
+++ b/experiment/src/client/DomainDesigner/domainDesigner.scss
@@ -1,14 +1,4 @@
 
-.domain-designer-button {
-  margin: 10px 0 20px 10px;
-  width: 116px;
-}
-
-.domain-designer-bottom-btns {
-  margin-top: 20px;
-}
-
-.domain-designer-save-btn {
-  margin: 20px 10px;
-  width: 100%
+.domain-designer-buttons .btn {
+  width: 75px;
 }
